--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "async-validator": "^4.0.7",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
